# tools-mrcode

./: .gitignore  README.md  pyproject.toml  requirements.txt  upload-distr.sh
.github/workflows/: publish-to-pypi.yml  publish-to-test-pypi.yml
src/tools_mrcode/: file_util.py  json_util.py  logging_util.py  mail_util.py  time_util.py
tests/: test_json_util.py  test_json_utils.py  test_mail_util.py
