[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tools_mrcode"
version = "0.0.5"
authors = [
  { name="mrcode", email="99299684@qq.com" },
]
description = "学习使用 Python 过程中，编写的一些工具"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "jsonpath_ng == 1.6.1"
]

[project.urls]
Homepage = "https://github.com/zq99299/tools-mrcode"
Issues = "https://github.com/zq99299/tools-mrcode/issues"